--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 * {
-  font-family: Roboto, serif;
-  transition: 0.2s;
+  font-family: "Anta", Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -11,4 +10,27 @@ a {
   text-decoration: none;
 }
 
-/*# sourceMappingURL=index.css.map */
+body {
+  background-color: #0B3D91;
+  animation: cosmicShift 60s infinite;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+@keyframes cosmicShift {
+  0%, 100% {
+    background-color: #0B3D91;
+  }
+  25% {
+    background-color: #32174D;
+  }
+  50% {
+    background-color: #553285;
+  }
+  75% {
+    background-color: #342E5F;
+  }
+}/*# sourceMappingURL=index.css.map */
