--- a/index.scss
+++ b/index.scss
@@ -16,29 +16,45 @@ body {
     margin: 0;
     justify-content: center;
     align-items: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     #parent-container {
         display: flex;
         flex-direction: column;
         width: 60%;
         max-width: 850px;
         .container {
-            justify-content: center;
-            align-items: center;
+            display: block;
+            animation-name: animateIn;
+            animation-duration: 350ms;
+            animation-delay: calc(var(--animation-order) * 150ms);
+            animation-fill-mode: both;
+            animation-timing-function: ease-in-out;
         }
         #pfp {
             text-align: center;
             margin-bottom: 30px;
         }
         #survey {
+            display: flex;
+            flex-direction: column;
             background: rgba(15, 15, 15, 0.76);
             border-radius: 8px;
             padding: 24px;
-            .title { 
+            .title {
+                display: flex;
+                flex-direction: column;
                 p {
                     font-weight: bold;
                     font-size: 24px;
                     color: white;
-                    padding-bottom: 10px;
+                    
+                }
+                span {
+                    color: grey;
+                    padding-top: 4px;
                 }
             }
             .option-list {
@@ -47,15 +63,26 @@ body {
                 .option {
                     border-radius: 8px;
                     cursor: pointer;
+                    transition: 0.1s;
                     p {
                         color: white;
                         font-size: 22px;
                         font-weight: 500;
-                        padding: 6px 10px;
+                        padding: 8px 8px 8px 0px;
                     }
                     &:hover {
-                        background:rgba(170, 170, 170, 0.3)
+                        background:rgba(170, 170, 170, 0.3);
+                        margin-left: 8px;
+                        transition: 0.1s;
+                        p {
+                            color: deepskyblue;
+                            font-weight: 700;
+                            padding: 8px 8px 8px 8px;
+                        }
                     }
+                }
+                .option:first-of-type {
+                    margin-top: 10px;
                 }
             }
         }
@@ -168,3 +195,13 @@ body {
     75% { background-color: #342E5F; } // Twilight Violet
 }
 
+@keyframes animateIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.6) translateY(-8px);
+    }
+    
+    100% {
+      opacity: 1;
+    }
+  }
