--- a/index.scss
+++ b/index.scss
@@ -50,10 +50,9 @@ body {
                     font-weight: bold;
                     font-size: 24px;
                     color: white;
-                    
                 }
                 span {
-                    color: grey;
+                    color: #999;
                     padding-top: 4px;
                 }
             }
