--- a/index.scss
+++ b/index.scss
@@ -51,7 +51,7 @@ body {
                     font-size: 24px;
                     color: white;
                 }
-                span {
+                .span {
                     color: #999;
                     padding-top: 4px;
                 }
