--- a/index.scss
+++ b/index.scss
@@ -46,7 +46,7 @@ body {
             .title {
                 display: flex;
                 flex-direction: column;
-                p {
+                .main {
                     font-weight: bold;
                     font-size: 24px;
                     color: white;
@@ -54,6 +54,7 @@ body {
                 .span {
                     color: #999;
                     padding-top: 4px;
+                    font-weight: normal;
                 }
             }
             .option-list {
