--- a/index.scss
+++ b/index.scss
@@ -54,7 +54,6 @@ body {
                 .span {
                     color: #999;
                     padding-top: 4px;
-                    font-weight: normal;
                 }
             }
             .option-list {
@@ -205,3 +204,28 @@ body {
       opacity: 1;
     }
   }
+
+@media only screen and (max-width: 1090px) {
+    .row {
+        flex-direction: column !important;
+        margin: 0 !important;
+    }
+    .card {
+        margin: 10px 0px !important;
+    }
+    #parent-container {
+        width: 85% !important;
+        padding-bottom: 60px;
+    }
+    body {
+        justify-content: baseline !important;
+        align-items: baseline !important;
+        padding: 40px 0px;
+    }
+}
+
+@media only screen and (max-width: 529px) {
+    .copy-to-clipboard {
+        display: none !important;
+    }
+}
